--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "reactfiberthreejsvr",
+  "homepage": "https://dreprototo.github.io/React-Three-FiberVRTesting",
+  "name": "React-Three-FiberVRTesting",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@react-three/fiber": "^8.12.0",
     "@react-three/postprocessing": "^2.7.1",
     "@react-three/xr": "^5.4.1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -16,6 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
